k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autoscale-hub-service
  labels:
    app: autoscale-hub
spec:
  type: NodePort
  selector:
    app: autoscale-hub
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
